some .svn folder excluded
git-svn-id: svn://localhost/trunk@1180 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/doc/surfit.cfg
+++ b/surfit/doc/surfit.cfg
@@ -139,7 +139,12 @@ INPUT                  = src/install.doc \
 			 ../src/surfit_io/surf_io_tcl.h 
 FILE_PATTERNS          = *.doc
 RECURSIVE              = YES
-EXCLUDE                = 
+EXCLUDE                = /src/.svn/* \
+			 ../src/surfit/.svn/* \
+			 ../src/sstuff/.svn/* \
+		   	 ../src/freeflow/.svn/* \
+			 ../src/globe/.svn/* \
+			 ../src/surfit_io/.svn/*
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
 EXAMPLE_PATH           = ../examples
