surfit.exe added
git-svn-id: svn://localhost/trunk@1182 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/vc8/freeflow.vcproj
+++ b/surfit/vc8/freeflow.vcproj
@@ -62,7 +62,7 @@
 				PrecompiledHeaderFile=".\../Release/freeflow.pch"
 				AssemblerListingLocation=".\../Release/"
 				ObjectFile=".\../Release/"
-				ProgramDataBaseFileName=".\../Release/"
+				ProgramDataBaseFileName=".\../Release/vc80.pdb"
 				BrowseInformation="1"
 				WarningLevel="3"
 				SuppressStartupBanner="true"
@@ -158,7 +158,7 @@
 				PrecompiledHeaderFile=".\../Debug/freeflow.pch"
 				AssemblerListingLocation=".\../Debug/"
 				ObjectFile=".\../Debug/"
-				ProgramDataBaseFileName=".\../Debug/"
+				ProgramDataBaseFileName=".\../Debug/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Debug/"
 				WarningLevel="3"
@@ -459,7 +459,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE2/freeflow.pch"
 				AssemblerListingLocation=".\../Release_SSE2/"
 				ObjectFile=".\../Release_SSE2/"
-				ProgramDataBaseFileName=".\../Release_SSE2/"
+				ProgramDataBaseFileName=".\../Release_SSE2/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE2/"
 				WarningLevel="3"
@@ -562,7 +562,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE/freeflow.pch"
 				AssemblerListingLocation=".\../Release_SSE/"
 				ObjectFile=".\../Release_SSE/"
-				ProgramDataBaseFileName=".\../Release_SSE/"
+				ProgramDataBaseFileName=".\../Release_SSE/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE/"
 				WarningLevel="3"
