--- a/surfit/vc8/globe.vcproj
+++ b/surfit/vc8/globe.vcproj
@@ -57,7 +57,7 @@
 				PrecompiledHeaderFile=".\../Debug/globe.pch"
 				AssemblerListingLocation=".\../Debug/"
 				ObjectFile=".\../Debug/"
-				ProgramDataBaseFileName=".\../Debug/"
+				ProgramDataBaseFileName=".\../Debug/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Debug/"
 				WarningLevel="3"
@@ -164,7 +164,7 @@
 				PrecompiledHeaderFile=".\../Release/globe.pch"
 				AssemblerListingLocation=".\../Release/"
 				ObjectFile=".\../Release/"
-				ProgramDataBaseFileName=".\../Release/"
+				ProgramDataBaseFileName=".\../Release/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release/"
 				WarningLevel="3"
@@ -467,7 +467,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE2/globe.pch"
 				AssemblerListingLocation=".\../Release_SSE2/"
 				ObjectFile=".\../Release_SSE2/"
-				ProgramDataBaseFileName=".\../Release_SSE2/"
+				ProgramDataBaseFileName=".\../Release_SSE2/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE2/"
 				WarningLevel="3"
@@ -571,7 +571,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE/globe.pch"
 				AssemblerListingLocation=".\../Release_SSE/"
 				ObjectFile=".\../Release_SSE/"
-				ProgramDataBaseFileName=".\../Release_SSE/"
+				ProgramDataBaseFileName=".\../Release_SSE/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE/"
 				WarningLevel="3"
