--- a/surfit/vc8/sstuff.vcproj
+++ b/surfit/vc8/sstuff.vcproj
@@ -56,7 +56,7 @@
 				PrecompiledHeaderFile=".\../Debug/sstuff.pch"
 				AssemblerListingLocation=".\../Debug/"
 				ObjectFile=".\../Debug/"
-				ProgramDataBaseFileName=".\../Debug/"
+				ProgramDataBaseFileName=".\../Debug/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Debug/"
 				WarningLevel="3"
@@ -164,7 +164,7 @@
 				PrecompiledHeaderFile=".\../Release/sstuff.pch"
 				AssemblerListingLocation=".\../Release/"
 				ObjectFile=".\../Release/"
-				ProgramDataBaseFileName=".\../Release/"
+				ProgramDataBaseFileName=".\../Release/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release/"
 				WarningLevel="3"
@@ -478,7 +478,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE2/sstuff.pch"
 				AssemblerListingLocation=".\../Release_SSE2/"
 				ObjectFile=".\../Release_SSE2/"
-				ProgramDataBaseFileName=".\../Release_SSE2/"
+				ProgramDataBaseFileName=".\../Release_SSE2/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE2/"
 				WarningLevel="3"
@@ -585,7 +585,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE/sstuff.pch"
 				AssemblerListingLocation=".\../Release_SSE/"
 				ObjectFile=".\../Release_SSE/"
-				ProgramDataBaseFileName=".\../Release_SSE/"
+				ProgramDataBaseFileName=".\../Release_SSE/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE/"
 				WarningLevel="3"
