--- a/surfit/vc8/surfit.vcproj
+++ b/surfit/vc8/surfit.vcproj
@@ -56,7 +56,7 @@
 				PrecompiledHeaderFile=".\../Debug/surfit.pch"
 				AssemblerListingLocation=".\../Debug/"
 				ObjectFile=".\../Debug/"
-				ProgramDataBaseFileName=".\../Debug/"
+				ProgramDataBaseFileName=".\../Debug/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Debug/"
 				WarningLevel="3"
@@ -164,7 +164,7 @@
 				PrecompiledHeaderFile=".\../Release/surfit.pch"
 				AssemblerListingLocation=".\../Release/"
 				ObjectFile=".\../Release/"
-				ProgramDataBaseFileName=".\../Release/"
+				ProgramDataBaseFileName=".\../Release/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release/"
 				WarningLevel="3"
@@ -473,7 +473,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE2/surfit.pch"
 				AssemblerListingLocation=".\../Release_SSE2/"
 				ObjectFile=".\../Release_SSE2/"
-				ProgramDataBaseFileName=".\../Release_SSE2/"
+				ProgramDataBaseFileName=".\../Release_SSE2/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE2/"
 				WarningLevel="3"
@@ -581,7 +581,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE/surfit.pch"
 				AssemblerListingLocation=".\../Release_SSE/"
 				ObjectFile=".\../Release_SSE/"
-				ProgramDataBaseFileName=".\../Release_SSE/"
+				ProgramDataBaseFileName=".\../Release_SSE/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE/"
 				WarningLevel="3"
