--- a/surfit/vc8/surfit_io.vcproj
+++ b/surfit/vc8/surfit_io.vcproj
@@ -63,7 +63,7 @@
 				PrecompiledHeaderFile=".\../Release/surfit_io.pch"
 				AssemblerListingLocation=".\../Release/"
 				ObjectFile=".\../Release/"
-				ProgramDataBaseFileName=".\../Release/"
+				ProgramDataBaseFileName=".\../Release/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release/"
 				WarningLevel="3"
@@ -161,7 +161,7 @@
 				PrecompiledHeaderFile=".\../Debug/surfit_io.pch"
 				AssemblerListingLocation=".\../Debug/"
 				ObjectFile=".\../Debug/"
-				ProgramDataBaseFileName=".\../Debug/"
+				ProgramDataBaseFileName=".\../Debug/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Debug/"
 				WarningLevel="3"
@@ -469,7 +469,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE2/surfit_io.pch"
 				AssemblerListingLocation=".\../Release_SSE2/"
 				ObjectFile=".\../Release_SSE2/"
-				ProgramDataBaseFileName=".\../Release_SSE2/"
+				ProgramDataBaseFileName=".\../Release_SSE2/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE2/"
 				WarningLevel="3"
@@ -575,7 +575,7 @@
 				PrecompiledHeaderFile=".\../Release_SSE/surfit_io.pch"
 				AssemblerListingLocation=".\../Release_SSE/"
 				ObjectFile=".\../Release_SSE/"
-				ProgramDataBaseFileName=".\../Release_SSE/"
+				ProgramDataBaseFileName=".\../Release_SSE/vc80.pdb"
 				BrowseInformation="1"
 				BrowseInformationFile=".\../Release_SSE/"
 				WarningLevel="3"
