added surfit folder
git-svn-id: svn://localhost/trunk@1187 3bdad9f7-c964-442a-868d-553b97b55ca0

--- a/surfit/src/doc/surfit.cfg
+++ b/surfit/src/doc/surfit.cfg
@@ -82,12 +82,13 @@ WARN_LOGFILE           = surfit.log
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = groups.doc ../sstuff 
+INPUT                  = groups.doc ../sstuff ../surfit
 #../surfit ../freeflow ../globe ../surfit_io
 FILE_PATTERNS          = *.doc \
                          *.h
 RECURSIVE              = YES
-EXCLUDE                = ../sstuff/ptypes
+EXCLUDE                = ../sstuff/ptypes ../sstuff/.svn \
+			 ../surfit/.svn
 EXCLUDE_SYMLINKS       = NO
 EXCLUDE_PATTERNS       = 
 EXAMPLE_PATH           = 
