--- a/surfit/surfit.desktop
+++ b/surfit/surfit.desktop
@@ -3,8 +3,8 @@ Encoding=UTF-8
 Name=surift
 Comment=gridding software
 Exec="surfit"
-Terminal=yes
+Terminal=true
 Icon=gnome-terminal.png
 Type=Application
 StartupNotify=true
-Categories=Science;Geology;Math;Physics
+Categories=Science;Geology;Math;Physics;
