--- a/surfit/src/doc/surfit.cfg
+++ b/surfit/src/doc/surfit.cfg
@@ -3,7 +3,7 @@
 #---------------------------------------------------------------------------
 # Project related configuration options
 #---------------------------------------------------------------------------
-PROJECT_NAME           = "surfit sources"
+PROJECT_NAME           = "surfit"
 PROJECT_NUMBER         = 3.0
 OUTPUT_DIRECTORY       = 
 CREATE_SUBDIRS         = NO
@@ -52,11 +52,11 @@ HIDE_UNDOC_MEMBERS     = NO
 HIDE_UNDOC_CLASSES     = NO
 HIDE_FRIEND_COMPOUNDS  = NO
 HIDE_IN_BODY_DOCS      = NO
-INTERNAL_DOCS          = NO
+INTERNAL_DOCS          = YES
 CASE_SENSE_NAMES       = NO
 HIDE_SCOPE_NAMES       = YES
-SHOW_INCLUDE_FILES     = NO
-INLINE_INFO            = NO
+SHOW_INCLUDE_FILES     = YES
+INLINE_INFO            = YES
 SORT_MEMBER_DOCS       = YES
 SORT_BRIEF_DOCS        = NO
 SORT_BY_SCOPE_NAME     = NO
@@ -82,15 +82,16 @@ WARN_LOGFILE           = surfit.log
 #---------------------------------------------------------------------------
 # configuration options related to the input files
 #---------------------------------------------------------------------------
-INPUT                  = groups.doc ../sstuff ../surfit
+INPUT                  = groups.doc ../sstuff ../surfit 
 #../surfit ../freeflow ../globe ../surfit_io
 FILE_PATTERNS          = *.doc \
                          *.h
 RECURSIVE              = YES
 EXCLUDE                = ../sstuff/ptypes ../sstuff/.svn \
-			 ../surfit/.svn
+			 ../surfit/.svn ../surfit/creeps ../surfit/ptypes \
+			 ../surfit/shapelib
 EXCLUDE_SYMLINKS       = NO
-EXCLUDE_PATTERNS       = 
+EXCLUDE_PATTERNS       = *_tcl.h *_tcl.cpp triangle.h
 EXAMPLE_PATH           = 
 EXAMPLE_PATTERNS       = *.tcl
 EXAMPLE_RECURSIVE      = YES
@@ -102,8 +103,8 @@ FILTER_SOURCE_FILES    = NO
 # configuration options related to source browsing
 #---------------------------------------------------------------------------
 SOURCE_BROWSER         = NO
-INLINE_SOURCES         = NO
-STRIP_CODE_COMMENTS    = NO
+INLINE_SOURCES         = YES
+STRIP_CODE_COMMENTS    = YES
 REFERENCED_BY_RELATION = YES
 REFERENCES_RELATION    = YES
 USE_HTAGS              = NO
